# low_vram_institute

./: .gitignore  README.md  parameter_golf.py  pyproject.toml  run.py  test_run.py
config/: parameter_golf_rules.md  prompt.md  runtime.json  sources.json
lab_core/: ARCHITECTURE.md  MANIFESTO.md  README.md  ROADMAP_V2.md  pyproject.toml
lab_core/config/: parameter_golf_rules.md  runtime.json  sources.json
lab_core/launchd/: com.lowvram.labcore.plist
lab_core/logs/parameter_golf/: 2026_03_21_run_0009.txt  2026_03_22_run_0001.txt  2026_03_22_run_0003.txt  2026_03_22_run_0005.txt  2026_03_22_run_0009.txt  2026_03_22_run_0010.txt
lab_core/scripts/: bootstrap_parameter_golf.sh
lab_core/snapshots/research/: example_parameter_golf_readme.txt  parameter_golf_readme.json
lab_core/src/lab_core/: __init__.py  cli.py  config.py  evaluator.py  executor.py  models.py  planner.py  publisher.py  state_store.py  supervisor.py
lab_core/src/lab_core/adapters/: dummy.py  parameter_golf.py
lab_core/src/lab_core/services/: codex_wrapper.py  github_intake.py  parameter_golf_workspace.py  research.py
lab_core/state/: README.md  agenda.md  best_runs.json  community_queue.jsonl  current_state.json  ideas_queue.md  insights.md  learning_state.json  lessons.md  rejected_ideas.md
lab_core/tests/: test_github_intake.py  test_parameter_golf_adapter.py  test_planner.py  test_publisher.py  test_supervisor.py
lab_public/: README.md
launchd/: com.lowvram.labcore.plist
output/: README.md
scripts/: check_env.sh
state/: README.md  best_diff.patch  best_script.py  ledger.jsonl
(+803 files in other folders)
