[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "low-vram-lab"
version = "0.2.0"
description = "Autonomous public research lab for Parameter Golf on Apple Silicon"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
lab = "lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
