[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-core"
version = "0.1.0"
description = "Local-first autonomous public research lab core"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
lab-core = "lab_core.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
